Add several CodeQL mappings (#457)
Adds several mappings for CodeQL rules, as well as adds a new
integration test for a more recent version of CodeQL+WebGoat 2023.8.